k8s/disabled/pastebin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pastebin
  namespace: pastebin
  labels:
    app: pastebin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Share text snippets
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Misc
    gethomepage.dev/icon: pastebin
    gethomepage.dev/name: Pastebin
    uptimekuma.io/monitor: "true"
    uptimekuma.io/name: "Pastebin"
    uptimekuma.io/type: "http"
    uptimekuma.io/interval: "120"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pb.herrington.services
      secretName: pb-tls-cert
  rules:
    - host: pb.herrington.services
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pastebin-http
                port:
                  number: 80
